# NBodyGravitySimulator

./: CMakeLists.txt  celestial_objects.hpp  main.cpp
